--- a/index.html
+++ b/index.html
@@ -1,17 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Saraa Grocery</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Sarr</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Bootstrap icons-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="test.css" rel="stylesheet" />
   </head>
   <body>
-    <main>
-        <h1>Saraa Grocery</h1>  
-    </main>
-	<script src="index.js"></script>
+    <!-- Responsive navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container px-lg-5">
+        <a class="navbar-brand" href="test.html"
+          ><img
+            src="/SaraaGrocery/Images/MainLogo.png"
+            alt="..."
+            width="50"
+            height="50"
+        /></a>
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="test.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#m-1">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Header-->
+    <header class="py-5">
+      <div class="container px-lg-5" >
+        <div class="p-4 p-lg-5 bg-gradient rounded-3 text-center">
+          <div class="m-3 m-lg-5" style="background-color: rgb(176, 214, 155);">
+            <h1 class="display-5 fw-bold">Namaste!</h1>
+            <h3 class="display-7 fw-bold">Welcome to Saraa Grocery</h3>
+
+            <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+              <img
+                src="/SaraaGrocery/Images/MainLogo.png"
+                alt="..."
+                class="center"
+              />
+            </ul>
+            <section class="page-section" id="services">
+              <div class="container">
+                <div class="text-center">
+                  <button
+                    class="btn btn-primary btn-xl text-uppercase"
+                    onclick="window.open('https://www.google.com/maps/search/?api=1&query=8220+Refugee+Rd,+Pickerington,+OH+43147', '_blank')"
+                  >
+                    Take Me There!
+                  </button>
+                  <h2 class="section-heading text-uppercase">BIG SALEE!!</h2>
+                    <h4 class="my-3">Saraa Grocery</h4>
+                    <p class="text-muted">Come Vist Us</p>
+
+              </div>
+              <div class="centers">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.4678628509746!2d-82.7417193!3d39.90854489999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88387aaf66797c05%3A0x4ad7cddce3f6a07!2s8220%20Refugee%20Rd%2C%20Pickerington%2C%20OH%2043147!5e0!3m2!1sen!2sus!4v1715811376056!5m2!1sen!2sus"
+                  width="600"
+                  height="450"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
+              <div class="m-1">
+                <h1>Contact Us</h1>
+                <div class="fs-6 fw-light mb-2">
+                  Send your feedback below. We will get back to you ASAP
+                </div>
+                <form id="contact_form" name="contact_form" method="post">
+                  <div class="mb-5">
+                    <label for="message">Message</label>
+                    <textarea
+                      class="form-control"
+                      id="message"
+                      name="message"
+                      rows="5"
+                    ></textarea>
+                  </div>
+                  <div class="mb-5 row">
+                    <div class="col">
+                      <label>Your Name:</label>
+                      <input
+                        type="text"
+                        required
+                        maxlength="50"
+                        class="form-control"
+                        id="name"
+                        name="name"
+                      />
+                    </div>
+                    <div class="col">
+                      <label for="email_addr">Your Email:</label>
+                      <input
+                        type="email"
+                        required
+                        maxlength="50"
+                        class="form-control"
+                        id="email_addr"
+                        name="email"
+                        placeholder="name@example.com"
+                      />
+                    </div>
+                  </div>
+                  <div class="d-grid">
+                    <button type="submit" class="btn btn-success">Send</button>
+                  </div>
+                </form>
+              </div>
+            </section>
+          </div>
+        </div>
+      </div>
+    </header>
+    <!-- Page Content-->
+
+    <!-- Footer-->
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; SaraaGrocery</p>
+      </div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="js/scripts.js"></script>
   </body>
 </html>
