--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container px-lg-5">
         <a class="navbar-brand" href="test.html"
           ><img
-            src="/SaraaGrocery/Images/MainLogo.png"
+            src="/Images/MainLogo.png"
             alt="..."
             width="50"
             height="50"
