--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
               <img
-                src="/SaraaGrocery/Images/MainLogo.png"
+                src="../Images/MainLogo.png"
                 alt="..."
                 class="center"
               />
