--- a/index.html
+++ b/index.html
@@ -77,8 +77,15 @@
                     Take Me There!
                   </button>
                   <h2 class="section-heading text-uppercase">BIG SALEE!!</h2>
-                    <h4 class="my-3">Saraa Grocery</h4>
-                    <p class="text-muted">Come Vist Us</p>
+                   
+                  <h4 class="my-3">Monday - 9:00AM - 9:00PM</h4>
+                  <h4 class="my-3">Tuesday - 9:00AM - 9:00PM</h4>
+                  <h4 class="my-3">Wednesday - 9:00AM - 9:00PM</h4>
+                  <h4 class="my-3">Thursday - 9:00AM - 9:00PM</h4>
+                  <h4 class="my-3">Friday - 9:00AM - 9:00PM</h4>
+                  <h4 class="my-3">Saturday - 9:00AM - 9:00PM</h4>
+                  <h4 class="my-3">Sunday - 9:00AM - 9:00PM</h4>
+                    <p class="text-muted">8220 Refugee Road, Suite 4, Pikerington, Ohio 43147</p>
 
               </div>
               <div class="centers">
