--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                   </button>
                   <h2 class="section-heading text-uppercase">BIG SALEE!!</h2>
                    
-                  <h4 class="my-6">Monday - 9:00AM - 9:00PM</h4>
-                  <h4 class="my-6">Tuesday - 9:00AM - 9:00PM</h4>
+                  <h4 class="text">Monday - 9:00AM - 9:00PM</h4>
+                  <h4 class="text">Tuesday - 9:00AM - 9:00PM</h4>
                   <h4 class="my-7">Wednesday - 9:00AM - 9:00PM</h4>
                   <h4 class="my-8">Thursday - 9:00AM - 9:00PM</h4>
                   <h4 class="my-9">Friday - 9:00AM - 9:00PM</h4>
