--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
                   </button>
                   <h2 class="section-heading text-uppercase">BIG SALEE!!</h2>
                    
-<p class="my-3">Monday - 9:00AM - 9:00PM</p>
-<p class="my-3">Tuesday - 9:00AM - 9:00PM</p>
-<p class="my-3">Wednesday - 9:00AM - 9:00PM</p>
-<p class="my-3">Thursday - 9:00AM - 9:00PM</p>
-<p class="my-3">Friday - 9:00AM - 9:00PM</p>
-<p class="my-3">Saturday - 9:00AM - 9:00PM</p>
-<p class="my-3">Sunday - 9:00AM - 9:00PM</p>
+<p class="mb-5">Monday - 9:00AM - 9:00PM</p>
+<p class="mb-5">Tuesday - 9:00AM - 9:00PM</p>
+<p class="mb-5">Wednesday - 9:00AM - 9:00PM</p>
+<p class="mb-5">Thursday - 9:00AM - 9:00PM</p>
+<p class="mb-5">Friday - 9:00AM - 9:00PM</p>
+<p class="mb-5">Saturday - 9:00AM - 9:00PM</p>
+<p class="mb-5">Sunday - 9:00AM - 9:00PM</p>
+
 
                     <p class="text-muted">8220 Refugee Road, Suite 4, Pikerington, Ohio 43147</p>
 
