--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
 
                     <p class="text-muted">8220 Refugee Road, Suite 4, Pikerington, Ohio 43147</p>
 
+                  <p class="mb-5">(614) 706-8398</p>
+
               </div>
               <div class="centers">
                 <iframe
