--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container px-lg-5">
-        <a class="navbar-brand" href="test.html"
-          ><img
-            src="../Images/MainLogo.png"
-            alt="..."
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="/SaraaGrocery/Images/MainLogo.png"
+            alt="Logo"
             width="50"
             height="50"
-        /></a>
-
+          />
+        </a>
         <button
           class="navbar-toggler"
           type="button"
@@ -43,121 +43,72 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="test.html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Home</a
               >
             </li>
-            <li class="nav-item"><a class="nav-link" href="#m-1">Contact</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#m-1">Contact</a>
+            </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- Header-->
     <header class="py-5">
-      <div class="container px-lg-5" >
+      <div class="container px-lg-5">
         <div class="p-4 p-lg-5 bg-gradient rounded-3 text-center">
-          <div class="m-3 m-lg-5" style="background-color: rgb(176, 214, 155);">
+          <div class="m-3 m-lg-5" style="background-color: rgb(176, 214, 155)">
             <h1 class="display-5 fw-bold">Namaste!</h1>
             <h3 class="display-7 fw-bold">Welcome to Saraa Grocery</h3>
-
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
               <img
-                src="../Images/MainLogo.png"
-                alt="..."
+                src="/SaraaGrocery/Images/MainLogo.png"
+                alt="Logo"
                 class="center"
               />
             </ul>
             <section class="page-section" id="services">
               <div class="container">
                 <div class="text-center">
-
-                  <h2 class="section-heading text-uppercase">BIG SALEE!!</h2>
-                   
-<p class="mb-5">Monday - 9:00AM - 9:00PM</p>
-<p class="mb-5">Tuesday - 9:00AM - 9:00PM</p>
-<p class="mb-5">Wednesday - 9:00AM - 9:00PM</p>
-<p class="mb-5">Thursday - 9:00AM - 9:00PM</p>
-<p class="mb-5">Friday - 9:00AM - 9:00PM</p>
-<p class="mb-5">Saturday - 9:00AM - 9:00PM</p>
-<p class="mb-5">Sunday - 9:00AM - 9:00PM</p>
-
-
-                    <p class="text-muted">8220 Refugee Road, Suite 4, Pikerington, Ohio 43147</p>
-
-                  <p class="mb-5">(614) 706-8398</p>
-
-              </div>
-              <div class="centers">
-                <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.4678628509746!2d-82.7417193!3d39.90854489999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88387aaf66797c05%3A0x4ad7cddce3f6a07!2s8220%20Refugee%20Rd%2C%20Pickerington%2C%20OH%2043147!5e0!3m2!1sen!2sus!4v1715811376056!5m2!1sen!2sus"
-                  width="600"
-                  height="450"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                ></iframe>
-              </div>
-              <div class="m-1">
-            <!--    <h1>(614) 706-8398</h1>  -->
-                <!--
-                <div class="fs-6 fw-light mb-2">
-                  Send your feedback below. We will get back to you ASAP
+                  <h2 class="section-heading text-uppercase text-primary mb-4">
+                    BIG SALE!
+                  </h2>
+                  <div class="mb-1">
+                    <p>Monday - 9:00 AM to 9:00 PM</p>
+                    <p>Tuesday - 9:00 AM to 9:00 PM</p>
+                    <p>Wednesday - 9:00 AM to 9:00 PM</p>
+                    <p>Thursday - 9:00 AM to 9:00 PM</p>
+                    <p>Friday - 9:00 AM to 9:00 PM</p>
+                    <p>Saturday - 9:00 AM to 9:00 PM</p>
+                    <p>Sunday - 9:00 AM to 9:00 PM</p>
+                  </div>
+                  <p class="text-bg-success fw-bold mb-1">
+                    8220 Refugee Road, Suite 4, Pickerington, Ohio 43147
+                  </p>
+                  <p class="fw-bold mb-4">(614) 706-8398</p>
                 </div>
-                
-                <form id="contact_form" name="contact_form" method="post">
-                  <div class="mb-5">
-                    <label for="message">Message</label>
-                    <textarea
-                      class="form-control"
-                      id="message"
-                      name="message"
-                      rows="5"
-                    ></textarea>
-                  </div>
-                  <div class="mb-5 row">
-                    <div class="col">
-                      <label>Your Name:</label>
-                      <input
-                        type="text"
-                        required
-                        maxlength="50"
-                        class="form-control"
-                        id="name"
-                        name="name"
-                      />
-                    </div>
-                    <div class="col">
-                      <label for="email_addr">Your Email:</label>
-                      <input
-                        type="email"
-                        required
-                        maxlength="50"
-                        class="form-control"
-                        id="email_addr"
-                        name="email"
-                        placeholder="name@example.com"
-                      />
-                    </div>
-                  </div>
-                  <div class="d-grid">
-                    <button type="submit" class="btn btn-success">Send</button>
-                  </div>
-                </form>
-                -->
+
+                <div class="responsive-iframe-container">
+                  <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3060.4678628509746!2d-82.7417193!3d39.90854489999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88387aaf66797c05%3A0x4ad7cddce3f6a07!2s8220%20Refugee%20Rd%2C%20Pickerington%2C%20OH%2043147!5e0!3m2!1sen!2sus!4v1715811376056!5m2!1sen!2sus"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"
+                  ></iframe>
+                </div>
+                <button
+                  class="btn btn-primary btn-xl text-uppercase"
+                  onclick="window.open('https://www.google.com/maps/search/?api=1&query=8220+Refugee+Rd,+Pickerington,+OH+43147', '_blank')"
+                >
+                  Take Me There!
+                </button>
               </div>
             </section>
           </div>
         </div>
       </div>
     </header>
-    <!-- Page Content-->
-                  <button
-                    class="btn btn-primary btn-xl text-uppercase"
-                    onclick="window.open('https://www.google.com/maps/search/?api=1&query=8220+Refugee+Rd,+Pickerington,+OH+43147', '_blank')"
-                  >
-                    Take Me There!
-                  </button>
     <!-- Footer-->
     <footer class="py-5 bg-dark">
       <div class="container">
