--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
     />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="index.html" rel="stylesheet" />
+    <link href="test.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Responsive navbar-->
