--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="container px-lg-5">
         <a class="navbar-brand" href="index.html">
           <img
-            src="/SaraaGrocery/Images/MainLogo.png"
+            src="/Images/MainLogo.png"
             alt="Logo"
             width="50"
             height="50"
