--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h3 class="display-7 fw-bold">Welcome to Saraa Grocery</h3>
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
               <img
-                src="/SaraaGrocery/Images/MainLogo.png"
+                src="/Images/MainLogo.png"
                 alt="Logo"
                 class="center"
               />
