--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <div class="container">
                 <div class="text-center">
                   <h2 class="section-heading text-uppercase text-primary mb-4">
-                    BIG SALE!
+                    GRAND OPENING!
                   </h2>
                   <div class="mb-1">
                     <p>Monday - 9:00 AM to 9:00 PM</p>
